@@ -57,7 +57,6 @@ my @TEST_PCS = (
         sector        => '1',
         unit          => 'II',
         fixed_format  => 'AB10 1II',
-        valid_outcode => 1,
     },
     {   raw          => 'A1 1AA',
         area         => 'A',
@@ -302,6 +301,17 @@ my @TEST_PCS = (
         valid            => 1,
         strict           => 1,
         non_geographical => 1,
+    },
+    {   raw              => 'E2 0HP',
+        area             => 'E',
+        district         => '2',
+        subdistrict      => undef,
+        sector           => '0',
+        unit             => 'HP',
+        fixed_format     => 'E2   0HP',
+        valid            => 1,
+        strict           => 1,
+        non_geographical => 0,
     },
 );
 
